--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
 .App {
   text-align: center;
 }
@@ -37,3 +39,789 @@
     transform: rotate(360deg);
   }
 }
+
+/*header*/
+
+.inicio{
+  color: rgb(250, 250, 250);
+  text-decoration: none;
+  font-size: 25px;
+  margin: 10px;
+  border-right: 1px solid white;
+  padding: 0 25px;
+  background-color: black;
+  
+}
+.conciertos{
+  color: rgb(250, 250, 250);
+  text-decoration: none;
+  font-size: 25px;
+  margin: 10px;
+  border-right: 1px solid white;
+  padding: 0 25px;
+  background-color: black;
+  
+}
+.discordia{
+  color: rgb(250, 250, 250);
+  text-decoration: none;
+  font-size: 25px;
+  margin: 10px;
+  border-right: 1px solid white;
+  padding: 0 25px;
+  background-color: black;
+}
+.contacto{
+  color: rgb(250, 250, 250);
+  text-decoration: none;
+  font-size: 25px;
+  margin: 10px;
+  background-color: black;
+}
+
+
+
+ *{
+  font-family: "Permanent Marker";
+background-color: rgb(7, 7, 7);
+padding: 0px;
+margin: 0px;
+
+ }
+
+
+
+.cabecera{
+  background-color: rgba(4, 3, 3, 0.881);
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ 
+ 
+}
+
+.botones{
+ display: flex;
+ justify-content: center;
+}
+ 
+
+.logo{
+  display: flex;
+  justify-content: left;
+  margin-left: 100px;
+  width: 200px;
+  border: none;
+}
+
+
+.bandera{
+  width: 30px;
+  display: flex;
+  justify-content: left;
+  border: none;
+}
+
+
+.lenguaje{
+  color: white;
+  display: flex;
+  justify-content: center;
+ 
+}
+/*
+.Main{
+  background-color: black;
+}
+.descripcion{
+  background-color: black;
+}
+*/
+/*titulo parrafos*/
+.parrafos{
+  font-size: 60px;
+  padding: 25px;
+  align-content: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.608);
+}
+
+.titulo {
+  background-image: url(https://www.chedonna.it/wp-content/uploads/2021/03/AdobeStock_applauso-2.jpg);
+}
+
+.titulo2 {
+  background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20190828/pngtree-fire-flames-on-dark-background-image_308363.jpg);
+}
+
+.imagen-verde{
+  width: 700px;
+}
+
+/* tarjetas conciertos*/
+
+.container2{
+  margin-left: 10%;
+  width: 80%;
+  height: 700px;
+  background-color: rgb(41, 37, 37);
+  margin: 80px;
+  margin-left: 120px;
+  position: relative;
+  
+}
+.texto-tarjeta1 {
+  background-color: rgb(41, 37, 37);
+}
+
+.texto-tarjeta2 {
+  background-color: rgb(41, 37, 37);
+}
+
+.evento1{
+  background-color: rgb(41, 37, 37);
+}
+
+.principal-tarjetas {
+  display: flex;
+  background-image: url(https://png.pngtree.com/thumb_back/fw800/background/20190828/pngtree-fire-flames-on-dark-background-image_308363.jpg);
+}
+
+.container-border{
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid gray;
+  border-left: 5px solid yellow;
+  width: 90%;
+  height: 250px;
+  margin-left: 50px;
+  margin-top: 50px;
+  background-color: rgba(40, 37, 37, 0.56);
+}
+
+.imagen{
+  width: 200px;
+  height: 200px;
+  float: right;
+}
+p{
+  background-color: rgba(40, 37, 37, 0.56);
+  color: white;
+}
+
+
+.mes{
+  color: white;
+  font-size: 20px;
+  background-color: rgba(40, 37, 37, 0.56);
+  font-weight: 500;
+  margin-right: 55px;
+}
+.año{
+  color: white;
+  font-size: 20px;
+  background-color: rgba(40, 37, 37, 0.56);
+  font-weight: 800;
+  margin-right: 55px;
+}
+.dia{
+  font-weight: 800;
+  font-size: 25px;
+  margin-right: 55px;
+}
+.fecha{
+  margin-left: 20px;
+  margin-top: 50px;
+  color: white;
+  background-color: rgba(40, 37, 37, 0.56);
+}
+
+.texto-titulo{
+  margin-top: 25px;
+  text-align: left;
+  color: white;
+  font-size: 40px;
+}
+
+.texto1{
+  margin: 0px;
+  margin-right: 10px;
+  font-family: sans-serif;
+  text-align: left;
+  font-size: 15px;
+}
+
+.compra{
+  margin-top: 7px;
+}
+
+.leyenda{
+  background-color: black;
+  font-family: sans-serif;
+}
+
+/*tarjeta de salas*/
+
+.parrafo-sala1 {
+background-color: black;
+font-size: 45px;
+margin: 0px;
+
+}
+
+.parrafo-sala2 {
+  background-color: black;
+  font-size: 15px;
+  margin: 0px;
+  
+}
+
+.parrafo-sala3 {
+  background-color: black;
+  font-size: 15px;
+  margin: 0px;
+}
+
+.parrafo-sala4 {
+  background-color: black;
+  font-size: 15px;
+}
+.compra{
+  border-bottom: 1px solid yellow;
+  text-align: left;
+}
+.evento{
+  background-color: rgba(0, 0, 0, 0.56);
+}
+.eventos{
+  color: black;
+  background-color: yellow;
+  width: 300px;
+  height: 50px;
+  margin-top: 40px;
+}
+
+/*carrusel sala*/
+
+.imagen-carrusel{
+  width: 350px;
+  }
+  
+
+img{
+  border: 1px solid white;
+  border-radius: 25px;
+  margin-right: 15px;
+}
+
+.titulo{
+  margin-top: 30px;
+}
+
+/*tarjetas*/
+
+.contenedores{
+  display: flex;
+  
+}
+.contenedor1{
+  width: 500px;
+  height: 350px;
+  background-color:  rgba(136, 44, 44);
+  border-radius: 20px;
+  margin-left: 120px;
+  margin-top: 35px;
+}
+.contenedor2{
+  width: 500px;
+  height: 350px;
+  background-color:  rgba(191, 29, 205);
+  border-radius: 20px;
+  margin-left: 35px;
+  margin-top: 35px;
+}
+.imagen-logo1{
+  width: 300px;
+  height: 130px;
+  background-color: rgb(136, 44, 44);
+  border: none;
+}
+.imagen-logo2{
+  width: 200px;
+}
+.titulo-tarjeta1{
+  background-color: rgb(136, 44, 44);
+  margin: 0px;
+}
+
+.parrafo1{
+  background-color: rgb(136, 44, 44);
+  font-family: sans-serif;
+  font-size: 15px;
+  margin: 0;
+}
+
+.parrafo-tarjeta1{
+  background-color: rgb(136, 44, 44);
+margin: 0px;
+margin-top: 5px;
+}
+
+
+.leyenda-tarjeta1{
+  background-color: rgb(136, 44, 44);
+  margin-top: 15px;
+}
+.imagen-logo2{
+  background-color: rgba(191, 29, 205); 
+  border: none;
+  margin-top: 8px;
+}
+.titulo-tarjeta2 {
+  background-color: rgba(229, 39, 226);
+  
+}
+
+.parrafo-tarjeta2{
+  background-color: rgba(193, 18, 209);
+  color: white;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.parrafo2{
+  background-color: rgb(193, 18, 209);
+  font-family: sans-serif;
+  margin: 0px;
+  font-size: 15px;
+  
+}
+h6{
+  background-color: rgb(193, 18, 209);
+}
+
+
+.leyenda-tarjeta2{
+  background-color: rgba(191, 29, 205);
+  margin-top: 25px;
+  
+}
+
+/*salas tarjeta espectrum y discordia*/
+
+.contenedor-descricion{
+  display: flex;
+margin-top: 50px;
+
+}
+.nombre-sala{
+  width: 350px;
+  border: none;
+  color: white;
+}
+.descripciones-parrafos {
+  float: left;
+  text-align: left;
+  
+}
+
+.descripcion-parrafo {
+  background-color: black;
+  margin: 0px;
+  font-family: sans-serif;
+}
+.descripcion-parrafo4{
+  font-size: 17px;
+  background-color: black;
+  
+}
+
+
+.imagen-sala{
+  width: 700px;
+  border: none;
+}
+
+/*comentarios*/
+
+.titulo-comentarios p {
+  font-size: 48px;
+  color: yellow;
+  background-color: black;
+  margin-top: 45px;
+  margin-bottom: 30px;
+}
+
+.carrusel-comentarios {
+  border-top: 1px solid white;
+ margin-bottom: 50px;
+ 
+}
+
+
+.contenedor-tarjetas {
+  display: flex;
+  justify-content: center;
+}
+
+.contenedor-tarjetas2 {
+  display: flex;
+}
+
+/*comentario 1*/
+
+.comentario1 {
+  width: 350px;
+  height: 320px;
+  background-color: white;
+  margin-right: 20px;
+}
+
+.imagen-comentario {
+  background-color: white;
+}
+.foto-comentario {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+}
+
+.fecha-comentario{
+  background-color: white;
+  color: gray;
+  font-family: sans-serif;
+  font-size: 10px;
+  text-align: center;
+  
+  
+}
+.nombre {
+  background-color: white;
+  text-align: center;
+  margin-top: 15px;
+  font-family: sans-serif;
+  font-weight: 600;
+}
+.estrellas  {
+  background-color: white;
+  margin-bottom: 9px;
+}
+.estrella {
+  background-color: white;
+  margin-bottom: 5px;
+}
+.comentario-tarjetas p {
+  background-color: white;
+  margin: 0px;
+  font-size: 15px;
+  color: black;
+}
+.comentario-tarjeta {
+  font-family: sans-serif;
+}
+
+/*resto de comentarios*/
+
+.comentario2 {
+  width: 350px;
+  height: 300px;
+  background-color: white;
+  margin-right: 20px;
+}
+
+.comentario3 {
+  width: 350px;
+  height: 280px;
+  background-color: white;
+  margin-right: 20px;
+}
+
+.comentario4 {
+  width: 350px;
+  height: 280px;
+  background-color: white;
+}
+
+/*mas informacion*/
+
+.contenedor-mas-informacion {
+  margin-top: 50px;
+ 
+}
+.titulo-mas-informacion{
+  margin: 0px;
+}
+
+.parrafo1-informacion {
+  background-color: black;
+  margin: 0px;
+  font-size: 60px;
+}
+.parrafo2-informacion {
+  background-color: black;
+  margin: 0px;
+  font-family: sa;font-family: sans-serif;
+  
+}
+.boton-contorno{
+  margin-top: 35px;
+  font-family: sans-serif;
+}
+.outline-warning{
+  font-size: 40px;
+  size: 25px;
+}
+
+
+/*informacion de contacto contenedor 1*/
+
+.contenedor-footer-informacion-contacto{
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 60px;
+}
+
+.logo-instagram{
+  margin-top: 10px;
+  width: 50px;
+  height: 50px;
+  border: none;
+}
+
+.marcador-mapa{
+  margin-top: 29px;
+  width: 20px;
+  height: 20px;
+  border: none;
+}
+
+img{
+  width: 190px;
+  border: none;
+  margin-bottom: 20px;
+  margin-right: 85px;
+}
+
+
+.texto-bajo-logo1{
+  margin: 0px;
+  font-family: sans-serif;
+  font-size: 14px;
+  background-color: black;
+  text-align: left;
+  color: rgb(196, 180, 180);
+}
+
+.siguenos {
+  background-color: black;
+  font-size: 15px;
+}
+.logo-instagram{
+  margin-left: 15px;
+}
+.marcador-mapa{
+  margin-right: 30px;
+  margin-top: 5px;
+}
+
+.informacion-contacto{
+  background-color: black;
+  font-size: 30px;
+  
+}
+
+
+.direccion{
+  background-color: black;
+  margin: 0px;
+  font-family: sans-serif;
+  font-style: oblique;
+  color: rgb(196, 180, 180);
+  text-align: left;
+  font-size: 14px;
+  
+}
+
+
+.bloque3{
+  background-color: black;
+  font-family: sans-serif;
+  font-size: 14px;
+  color: rgb(196, 180, 180);
+  
+}
+.bloque3-no{
+background-color: black;
+font-size: 30px;
+}
+ /*parte blanca logos europeos*/
+
+ .parte-blanca{
+  width: 100%;
+  height: 140px;
+  background-color: white;
+  
+ }
+ .iconos-europeos{
+  width: 54em;
+  background-color: white;
+  
+ }
+
+ /*enlace como llegar*/
+a {
+  
+  text-decoration: none;
+}
+
+/* pagina de contacto de la carpeta paginas enlazadas*/
+
+
+.tarjeta-contacto{
+  width: 100%;
+  height: 400px;
+  background-color: rgb(41, 37, 37);
+  padding: 30px;
+  margin: 0px;
+}
+
+.contactanos {
+  font-size: 50px;
+  text-align: left;
+  
+  margin: 0px;
+}
+
+.visitadnos1{
+  font-family: sans-serif;
+  font-size: 30px;
+  margin: 0px;
+  text-align: left;
+}
+.visitadnos2{
+  font-family: sans-serif;
+  font-size: 20px;
+  text-align: left;
+}
+
+.telefono{
+  font-family: sans-serif;
+  font-size: 18px;
+  text-align: left;
+  margin: 0px;
+  margin-bottom: 5px;
+}
+.instagram {
+font-family: sans-serif;
+font-size: 18px;
+text-align: left;
+background-color:rgb(38, 36, 36) ;
+margin: 0px;
+margin-left: 5px;
+margin-bottom: 5px;
+
+}
+
+.icono-instagram{
+ background-color: rgb(38, 36, 36);
+ width: 55px;
+ color: white;
+}
+
+.correo{
+  font-family: sans-serif;
+  text-align: left;
+  margin-left: 8px;
+  margin-bottom: 5px;
+  margin: 0px;
+
+}
+
+.mapa{
+  font-family: sans-serif;
+  text-align: left;
+ margin-top: 5px;
+}
+
+iframe{
+  width: 100%;
+}
+
+/*pagina de conciertos*/
+
+.contenedor-conciertos{
+  margin-left: 10%;
+  width: 90%;
+  height: 350px;
+  background-color: rgb(41, 37, 37);
+  margin: 80px;
+  margin-left: 120px;
+  position: relative;
+  border-radius: 25px;
+}
+
+.contenedor-conciertos2{
+  margin-left: 10%;
+  width: 90%;
+  height: 1260px;
+  background-color: rgb(41, 37, 37);
+  margin: 80px;
+  margin-left: 120px;
+  position: relative;
+  padding: 10px;
+  border-radius: 25px;
+}
+.titulo-conciertos{
+  background-color: black;
+  margin-top: 35px;
+  font-size: 35px;
+  font-family: sans-serif;
+}
+
+/*pagina discordia*/
+
+.elementor-element {
+  padding: 40px;
+}
+.titular-discordia{
+  background-color: black;
+  font-size: 80px;
+  margin-top: 100px;
+  margin-bottom: 120px;
+}
+
+.discordia-titulo{
+font-size: 40px;
+}
+
+.titulo-discordia{
+  width: 100%;
+  height: 150px;
+  background-color: rgb(38, 36, 36);
+  padding: 45px;
+  border-radius: 25px;
+}
+.pasados{
+  padding: 35px;
+  
+}
+.eventos-pasados{
+  background-color: black;
+  font-size: 35px;
+  font-family: sans-serif;
+}
+.contenedor-conciertos3{
+  margin-left: 10%;
+  width: 90%;
+  height: 360px;
+  background-color: rgb(41, 37, 37);
+  margin: 80px;
+  margin-left: 120px;
+  position: relative;
+  padding: 10px;
+  border-radius: 25PX;
+}
+
+  
+
+
